xls output for distance matrix and code refactoring
